--- a/pages/timeSet/timeSet.wxss
+++ b/pages/timeSet/timeSet.wxss
@@ -1,35 +1,53 @@
 /* pages/timeSet/timeSet.wxss */
 .container{
   width:600rpx;
-  margin-top: 150rpx;
+  margin-top: 250rpx;
   padding:0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color:	#F5F5F5;
-  opacity: 0.7;
-  border-radius: 5%;
+  background-color:	#9faabb;
+  opacity: 0.9;
+  border-radius: 5rpx;
+  box-shadow: 3rpx 3rpx 2rpx #888888;
 }
 
-.group{
-  width:400rpx;
+.container view{
+  width: 500rpx;
   margin-top: 40rpx;
   display: flex;
   flex-direction: row;
   flex-wrap:wrap;
 }
 
-input{
-  width: 400rpx;
-  height:60rpx;
-  border:1rpx solid black;
-  border-radius: 10rpx;
-  background-color:	#F5F5F5;
+text{
+  font-size: 38rpx;
+  font-weight: 600;
 }
 
-.small_input{
-  width:200rpx;
-  text-align:center
+input{
+  width: 500rpx;
+  height:70rpx;
+  padding:10rpx;
+  padding-left: 30rpx;
+  border:1rpx solid rgb(105, 149, 160);
+  border-radius: 10rpx;
+  background-color:	#F5F5F5;
+  font-size: small;
+}
+
+picker{
+  font-size:30rpx;
+}
+
+.time{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.time picker text{
+  font-weight: normal;
 }
 
 .group border{
@@ -38,18 +56,20 @@ input{
   flex-direction: row;
 }
 
-.submit{
-    width: 200rpx;
-    height:200rpx;
-    margin-top: 80rpx;
-    border-radius: 50%;
-    background-color:#1E90FF;
-    opacity: 0.6;
+button{
+
+    height:70rpx;
+    margin-top: 40rpx;
+    margin-bottom: 40rpx;
+    border-radius: 10rpx;
+    background-color:#2f6d80;
+    opacity: 0.8;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+    box-shadow: 5rpx 5rpx 5rpx #333;
 }
-
 page{
   display: flex;
   flex-direction:row ;
