--- a/pages/booked/booked.wxml
+++ b/pages/booked/booked.wxml
@@ -1,5 +1,8 @@
 <!--pages/booked/booked.wxml-->
 <view class='container'>
+  <view wx:if='{{roomDetail.length==0}}' class='none'>
+    <text>暂无预约</text>
+  </view>
   <view class="single" wx:for="{{roomDetail}}">
     <view class='time'>
       <text>{{item.schedule.s.h}}:{{item.schedule.s.m}}</text>
