--- a/pages/booked/booked.wxss
+++ b/pages/booked/booked.wxss
@@ -14,6 +14,9 @@ page{
   width:750rpx;
   height:1185rpx;
   padding-top:50rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start
 }
 
 .single{
