--- a/pages/calendar/calendar.wxss
+++ b/pages/calendar/calendar.wxss
@@ -8,6 +8,7 @@
   flex-direction: row;
   flex-wrap:wrap;
   border-bottom: 5rpx solid;
+  margin-bottom:10rpx;
 }
 
 .container view{
@@ -81,3 +82,37 @@
   left:450rpx;
 }
 
+.single{
+  width: 740rpx;
+  height:200rpx;
+  padding-top:50rpx;
+  margin-bottom: 10rpx;
+  display: flex;
+  flex-direction: row;
+  background-color:	#7FFFAA;
+  border-radius: 20rpx;
+}
+
+.single:active{
+  background-color: 	#32CD32;
+}
+
+.time{
+  width: 200rpx;
+}
+
+.single view{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+}
+
+.single text{
+  margin-bottom: 50rpx;
+  text-align: center;
+}
+
+.body{
+  width:500rpx;
+}
