--- a/pages/signIn/signIn.wxss
+++ b/pages/signIn/signIn.wxss
@@ -74,3 +74,39 @@ button{
 .item{
   text-align: center;
 }
+.bgstyle{
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-color:rgba(0, 0, 0, .5);
+  z-index: 2;
+  top: 0;
+  left: 0;
+ }
+.windowContainer{
+  padding: 20rpx 0;
+  width: 80%;
+  height:60%;
+  background: #ffffff;
+  margin: 40% auto;
+  border-radius: 20rpx;
+  display: flex;
+  position: relative;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.isRuleShow{
+  display: block;
+ }
+ .isRuleHide{
+  display: none;
+ }
+ .ruleHide{
+  height: 60rpx!important;
+  width: 60rpx!important;
+  position: absolute;
+  top: -20rpx;
+  right: -20rpx;
+ }
