--- a/pages/today/today.wxml
+++ b/pages/today/today.wxml
@@ -13,6 +13,10 @@
     <view class="t_detail">
       <view class="t_meeting_boss">{{item.organiser}}</view>
       <view class="t_meeting_title">{{item.title}}</view>
+      <view class="t_meeting_time">
+        <view class="t_time_end">{{item.schedule.e.h}}:{{item.schedule.e.m==0?'00':item.schedule.e.m}}</view>
+      <view class="t_time_begin">{{item.schedule.s.h<10?'0'+item.schedule.s.h:item.schedule.s.h}}:{{item.schedule.s.m==0?'00':item.schedule.s.m}}-</view>
+    </view>
     </view>
   </view>
 </view>
